--- a/board/hc32f07x_core/project_example/project_keil5/example_amf07x_core.uvprojx
+++ b/board/hc32f07x_core/project_example/project_keil5/example_amf07x_core.uvprojx
@@ -887,11 +887,6 @@
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32_rcc_reset.c</FilePath>
             </File>
             <File>
-              <FileName>am_hc32_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\hdsc\drivers\source\rtc\am_hc32_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hc32_spi_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\spi\am_hc32_spi_dma.c</FilePath>
@@ -1055,6 +1050,11 @@
               <FileName>demo_hc32f07x_core_hw_clk.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\clk\demo_hc32f07x_core_hw_clk.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_std_buzzer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\buzzer\demo_hc32f07x_core_std_buzzer.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32f07x_core_std_crc.c</FileName>
@@ -1407,11 +1407,6 @@
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\wdt\demo_hc32f07x_core_std_wdt.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32f07x_core_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\hc32f07x_core\rtc\demo_hc32f07x_core_std_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32f07x_core_usbd_mouse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_mouse.c</FilePath>
@@ -1485,6 +1480,11 @@
               <FileName>demo_hc32f07x_core_usbd_vcom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_vcom.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_wake_up.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\wakeup\demo_hc32f07x_wake_up.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1602,16 +1602,6 @@
               <FilePath>..\..\..\..\examples\soc\hdsc\lpuart\demo_hc32_hw_lpuart_tx_dma.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_lvd_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_int.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_hc32_hw_lvd_system_reset.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_system_reset.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_spi_master.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\spi\demo_hc32_hw_spi_master.c</FilePath>
@@ -1682,11 +1672,6 @@
               <FilePath>..\..\..\..\examples\soc\hdsc\uart\demo_hc32_hw_uart_tx_dma.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_vc_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\wdg\demo_hc32_hw_wdt.c</FilePath>
@@ -1715,6 +1700,21 @@
               <FileName>demo_hc32f07x_hw_dac_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\dac\demo_hc32f07x_hw_dac_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32_hw_lvd_system_reset.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_system_reset.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lvd_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32f07x_hw_lvd_int.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32_hw_vc_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32f07x_hw_lcd.c</FileName>
@@ -1880,11 +1880,6 @@
               <FileName>demo_std_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\std\wdt\demo_std_wdt.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\std\rtc\demo_std_rtc.c</FilePath>
             </File>
             <File>
               <FileName>demo_std_led_water_light.c</FileName>
@@ -2150,11 +2145,6 @@
               <FileName>am_hwconf_hc32f07x_pca.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_pca.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_hwconf_hc32f07x_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_rtc.c</FilePath>
             </File>
             <File>
               <FileName>am_hwconf_hc32f07x_spi_dma.c</FileName>
@@ -3131,11 +3121,6 @@
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32_rcc_reset.c</FilePath>
             </File>
             <File>
-              <FileName>am_hc32_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\hdsc\drivers\source\rtc\am_hc32_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hc32_spi_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\hdsc\drivers\source\spi\am_hc32_spi_dma.c</FilePath>
@@ -3299,6 +3284,11 @@
               <FileName>demo_hc32f07x_core_hw_clk.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\clk\demo_hc32f07x_core_hw_clk.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_std_buzzer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\buzzer\demo_hc32f07x_core_std_buzzer.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32f07x_core_std_crc.c</FileName>
@@ -3651,11 +3641,6 @@
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\wdt\demo_hc32f07x_core_std_wdt.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32f07x_core_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\hc32f07x_core\rtc\demo_hc32f07x_core_std_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32f07x_core_usbd_mouse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_mouse.c</FilePath>
@@ -3729,6 +3714,11 @@
               <FileName>demo_hc32f07x_core_usbd_vcom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_vcom.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_wake_up.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\board\hc32f07x_core\wakeup\demo_hc32f07x_wake_up.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3846,16 +3836,6 @@
               <FilePath>..\..\..\..\examples\soc\hdsc\lpuart\demo_hc32_hw_lpuart_tx_dma.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_lvd_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_int.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_hc32_hw_lvd_system_reset.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_system_reset.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_spi_master.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\spi\demo_hc32_hw_spi_master.c</FilePath>
@@ -3926,11 +3906,6 @@
               <FilePath>..\..\..\..\examples\soc\hdsc\uart\demo_hc32_hw_uart_tx_dma.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_vc_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\wdg\demo_hc32_hw_wdt.c</FilePath>
@@ -3959,6 +3934,21 @@
               <FileName>demo_hc32f07x_hw_dac_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\soc\hdsc\dac\demo_hc32f07x_hw_dac_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32_hw_lvd_system_reset.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_system_reset.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lvd_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\lvd\demo_hc32f07x_hw_lvd_int.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32_hw_vc_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32f07x_hw_lcd.c</FileName>
@@ -4124,11 +4114,6 @@
               <FileName>demo_std_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\std\wdt\demo_std_wdt.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\std\rtc\demo_std_rtc.c</FilePath>
             </File>
             <File>
               <FileName>demo_std_led_water_light.c</FileName>
@@ -4394,11 +4379,6 @@
               <FileName>am_hwconf_hc32f07x_pca.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_pca.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_hwconf_hc32f07x_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_rtc.c</FilePath>
             </File>
             <File>
               <FileName>am_hwconf_hc32f07x_spi_dma.c</FileName>
