--- a/board/hc32f07x_core/project_demo_bootloader/project_application/project_keil5/demo_amf07x_core_application.uvprojx
+++ b/board/hc32f07x_core/project_demo_bootloader/project_application/project_keil5/demo_amf07x_core_application.uvprojx
@@ -887,11 +887,6 @@
               <FilePath>..\..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32_rcc_reset.c</FilePath>
             </File>
             <File>
-              <FileName>am_hc32_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\soc\hdsc\drivers\source\rtc\am_hc32_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hc32_spi_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\soc\hdsc\drivers\source\spi\am_hc32_spi_dma.c</FilePath>
@@ -1065,6 +1060,11 @@
               <FileName>demo_hc32f07x_core_hw_clk.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\clk\demo_hc32f07x_core_hw_clk.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_std_buzzer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\buzzer\demo_hc32f07x_core_std_buzzer.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32f07x_core_std_crc.c</FileName>
@@ -1417,11 +1417,6 @@
               <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\wdt\demo_hc32f07x_core_std_wdt.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32f07x_core_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\rtc\demo_hc32f07x_core_std_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32f07x_core_usbd_mouse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_mouse.c</FilePath>
@@ -1577,11 +1572,6 @@
               <FilePath>..\..\..\..\..\examples\soc\hdsc\gpio\demo_hc32_hw_gpio_trigger.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\soc\hdsc\lcd\demo_hc32_hw_lcd.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_lpuart_int.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\lpuart\demo_hc32_hw_lpuart_int.c</FilePath>
@@ -1600,11 +1590,6 @@
               <FileName>demo_hc32_hw_lpuart_tx_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\lpuart\demo_hc32_hw_lpuart_tx_dma.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_hc32_hw_lvd_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_int.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32_hw_lvd_system_reset.c</FileName>
@@ -1682,11 +1667,6 @@
               <FilePath>..\..\..\..\..\examples\soc\hdsc\uart\demo_hc32_hw_uart_tx_dma.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_vc_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\wdg\demo_hc32_hw_wdt.c</FilePath>
@@ -1715,6 +1695,21 @@
               <FileName>demo_hc32f07x_hw_dac_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\dac\demo_hc32f07x_hw_dac_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lvd_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\soc\hdsc\lvd\demo_hc32f07x_hw_lvd_int.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32_hw_vc_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\soc\hdsc\lcd\demo_hc32f07x_hw_lcd.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1850,11 +1845,6 @@
               <FileName>demo_std_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\std\wdt\demo_std_wdt.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\std\rtc\demo_std_rtc.c</FilePath>
             </File>
             <File>
               <FileName>demo_std_led_water_light.c</FileName>
@@ -2125,11 +2115,6 @@
               <FileName>am_hwconf_hc32f07x_pca.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_pca.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_hwconf_hc32f07x_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_rtc.c</FilePath>
             </File>
             <File>
               <FileName>am_hwconf_hc32f07x_spi_dma.c</FileName>
@@ -3146,11 +3131,6 @@
               <FilePath>..\..\..\..\..\soc\hdsc\drivers\source\rcc\hw\amhw_hc32_rcc_reset.c</FilePath>
             </File>
             <File>
-              <FileName>am_hc32_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\soc\hdsc\drivers\source\rtc\am_hc32_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hc32_spi_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\soc\hdsc\drivers\source\spi\am_hc32_spi_dma.c</FilePath>
@@ -3324,6 +3304,11 @@
               <FileName>demo_hc32f07x_core_hw_clk.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\clk\demo_hc32f07x_core_hw_clk.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_core_std_buzzer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\buzzer\demo_hc32f07x_core_std_buzzer.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32f07x_core_std_crc.c</FileName>
@@ -3676,11 +3661,6 @@
               <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\wdt\demo_hc32f07x_core_std_wdt.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32f07x_core_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\rtc\demo_hc32f07x_core_std_rtc.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32f07x_core_usbd_mouse.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\board\hc32f07x_core\usbd\demo_hc32f07x_core_usbd_mouse.c</FilePath>
@@ -3836,11 +3816,6 @@
               <FilePath>..\..\..\..\..\examples\soc\hdsc\gpio\demo_hc32_hw_gpio_trigger.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\soc\hdsc\lcd\demo_hc32_hw_lcd.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_lpuart_int.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\lpuart\demo_hc32_hw_lpuart_int.c</FilePath>
@@ -3859,11 +3834,6 @@
               <FileName>demo_hc32_hw_lpuart_tx_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\lpuart\demo_hc32_hw_lpuart_tx_dma.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_hc32_hw_lvd_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\soc\hdsc\lvd\demo_hc32_hw_lvd_int.c</FilePath>
             </File>
             <File>
               <FileName>demo_hc32_hw_lvd_system_reset.c</FileName>
@@ -3941,11 +3911,6 @@
               <FilePath>..\..\..\..\..\examples\soc\hdsc\uart\demo_hc32_hw_uart_tx_dma.c</FilePath>
             </File>
             <File>
-              <FileName>demo_hc32_hw_vc_int.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
-            </File>
-            <File>
               <FileName>demo_hc32_hw_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\wdg\demo_hc32_hw_wdt.c</FilePath>
@@ -3974,6 +3939,21 @@
               <FileName>demo_hc32f07x_hw_dac_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\soc\hdsc\dac\demo_hc32f07x_hw_dac_dma.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lvd_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\soc\hdsc\lvd\demo_hc32f07x_hw_lvd_int.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32_hw_vc_int.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\soc\hdsc\vc\demo_hc32_hw_vc_int.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_hc32f07x_hw_lcd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\soc\hdsc\lcd\demo_hc32f07x_hw_lcd.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4109,11 +4089,6 @@
               <FileName>demo_std_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\std\wdt\demo_std_wdt.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_std_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\..\examples\std\rtc\demo_std_rtc.c</FilePath>
             </File>
             <File>
               <FileName>demo_std_led_water_light.c</FileName>
@@ -4384,11 +4359,6 @@
               <FileName>am_hwconf_hc32f07x_pca.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_pca.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_hwconf_hc32f07x_rtc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_hc32f07x_rtc.c</FilePath>
             </File>
             <File>
               <FileName>am_hwconf_hc32f07x_spi_dma.c</FileName>
