--- a/board/hc32f07x_core/project_template/project_eclipse/.project
+++ b/board/hc32f07x_core/project_template/project_eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>template_amf07x_core</name>
+	<name>example_amf07x_core</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -44,6 +44,11 @@
 			<name>components</name>
 			<type>2</type>
 			<locationURI>PARENT-4-PROJECT_LOC/components</locationURI>
+		</link>
+		<link>
+			<name>examples</name>
+			<type>2</type>
+			<locationURI>PARENT-4-PROJECT_LOC/examples</locationURI>
 		</link>
 		<link>
 			<name>interface</name>
